k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-healthcare-ingress
  namespace: smart-healthcare
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: smart-healthcare.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-admin-service
                port:
                  number: 4000
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: auth-admin-service
                port:
                  number: 4000
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 4001
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 4002
          - path: /api/patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 4003
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 4004
          - path: /api/doctors
            pathType: Prefix
            backend:
              service:
                name: doctor-service
                port:
                  number: 4005
          - path: /api/sessions
            pathType: Prefix
            backend:
              service:
                name: telemedicine-service
                port:
                  number: 4006
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
